frontend fully functional